<package format="2">
  <name>schunk_bringup</name>
  <version>0.6.14</version>
  <description>This package provides an interface for operating the schunk dexterous hand (SDH), including the tactile sensors.</description>

  <license>Apache 2.0</license>

  <url type="website">http://ros.org/wiki/schunk_sdh</url>
  <!-- <url type="bugtracker"></url> -->
 <maintainer email="padmaja2065@gmail.com">Padmaja Kulkarni</maintainer>

  <buildtool_depend>catkin</buildtool_depend>


  <depend>schunk_sdh</depend>


</package>
